# ccvt

./: CMakeLists.txt  LICENSE  README.md  arg.c  bag.c  ccl.h  ccvt.c  ccvt.h  com.c  com.h  correct.conf  dir.c  dir.h  lib.h  lot.c  main.c  moe_dict.conf  pin.c  pod.c  sac.h  seq.c  set.c  std.h  str_file.c  str_utf8.h  txt.h  var.c  var.h  var_text.c
src/: CMakeLists.txt  arg.h  bag.h  ccvt.c  inc.h  key.c  key.h  lot.h  main.c  obj.c  obj.h  pin.h  pod.h  sac.c  seq.h  set.h  std.c  str.c  str.h  str_file.h  str_utf8.c  txt.c  var_text.h
src/tc/: correct.conf  skip.txt
