cmake_minimum_required(VERSION 3.19)
project(ccvt)
# set(CMAKE_VERBOSE_MAKEFILE ON)
if(WIN32)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_CCVT_DATA_DIR=${CMAKE_INSTALL_PREFIX}/ccvt")
else()
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_CCVT_DATA_DIR=${CMAKE_INSTALL_PREFIX}/share/ccvt")
endif()
add_executable(ccvt main.c ccvt.c com.c dir.c std.c bag.c lot.c sac.c str.c str_utf8.c str_file.c obj.c pin.c seq.c pod.c set.c key.c var.c var_text.c txt.c arg.c)
install(TARGETS ccvt RUNTIME DESTINATION bin)
if(WIN32)
install(DIRECTORY tc DESTINATION ccvt)
install(DIRECTORY sc DESTINATION ccvt)
else()
install(DIRECTORY tc DESTINATION share/ccvt)
install(DIRECTORY sc DESTINATION share/ccvt)
endif()
